<resources>
    <string name="app_name">muse-app-android</string>
    <string name="logo_muse">MUSE</string>
    <string name="logo_analyzer">ANALYZER</string>
    <string name="tri_croissant">Croissant</string>
    <string name="capture_etat">Etat de la capture</string>
    <string name="ic_settings">Paramètres</string>
    <string name="new_capture_title_bar">Nouvelle capture</string>
    <string name="new_capture_details">Détails</string>
    <string name="new_capture_capture">Capture</string>
    <string name="new_capture_etat">Etat *</string>
    <string name="new_capture_suivant">Suivant</string>
    <string name="CreateCaptureDetailsPlaceholderTitle">Nom de la capture *</string>
    <string name="CreateCaptureDetailsPlaceholderDescription">Description *</string>
    <string name="CreateCaptureTemps">Temps écoulé</string>
    <string name="DetailCaptureModifier">Modifier</string>
    <string name="connect_device_refresh">Rafraichir</string>
    <string name="connect_device_next">Suivant</string>
    <string name="connect_device_selection"> Veuillez sélectionner un appareil</string>
    <string name="connect_device_title_bar"> Connecter l\'appareil</string>
    <string name="db_name">Captures.db</string>
    <string name="champs_obligatoires">Champs obligatoires *</string>
    <string name="capture_list_date_filter">DATE :</string>
    <string name="capture_list_filter_decroissant">DECROISSANT</string>
    <string name="capture_list_filter_croissant">CROISSANT</string>
    <string name="permission_dialog_title">Muse a besoin de votre permission</string>
    <string name="permission_dialog_description">Muse a besoin de plusieurs permissions pour fonctionner correctement. Cliquez sur "Autorisez" sur la prochaine pop-up pour continuer. Si vous refusez, Le casque ne fonctionnera pas correctement tant que vous ne le modifierez pas dans les paramètres.</string>
    <string name="permission_dialog_understand">J\'ai compris</string>
</resources>
