<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_app"
    tools:context=".presentation.ui.activity.CaptureListActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="700dp"
        android:contentDescription="@string/logo_muse"
        app:layout_constraintBottom_toTopOf="@+id/txtMuse"
        app:layout_constraintEnd_toStartOf="@+id/btnTriDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_muse"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txtMuse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="13dp"
        android:text="@string/logo_muse"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/txtAnalyzer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAnalyzer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/logo_analyzer"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTriDate"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="88dp"
        android:text="@string/tri_croissant"
        android:textColor="@color/colorAccent"
        app:backgroundTint="@color/colorBlue"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/capture_list_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMuse" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="80dp"
        android:layout_margin="32dp"
        android:layout_gravity="bottom|right"
        app:backgroundTint="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="609dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/capture_list_date_filter"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnTriDate"
        app:layout_constraintStart_toEndOf="@+id/imgLogo"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>