<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_app"
    tools:context=".presentation.ui.activity.NewCaptureDetailsActivity"
    tools:layout_editor_absoluteY="89dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCapture"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="104dp"
        android:alpha="0.5"
        android:text="@string/new_capture_capture"
        android:textColor="@color/colorAccent"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/txtLayoutNom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/CreateCaptureDetailsPlaceholderTitle"
        android:textColorHint="@color/colorPlaceHolderInput"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintBottom_toTopOf="@+id/txtLayoutDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCapture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditNom"
            android:layout_width="1280dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textCursorDrawable="@drawable/color_cursor_input"
            tools:layout_editor_absoluteY="359dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="61dp"
        android:hint="@string/CreateCaptureDetailsPlaceholderDescription"
        android:maxHeight="60dp"
        android:textColorHint="@color/colorPlaceHolderInput"
        android:theme="@style/TextInputLayoutAppearance"
        app:counterEnabled="true"
        app:counterMaxLength="150"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutNom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:inputType="textMultiLine"
            android:maxHeight="70dp"
            android:textColor="@color/colorAccent"

            android:textCursorDrawable="@drawable/color_cursor_input" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtEtat"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="1174dp"
        android:layout_marginBottom="54dp"
        android:text="@string/new_capture_etat"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imgEtatContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgEtatContent"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="117dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgEtatEtonne"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/content" />

    <ImageView
        android:id="@+id/imgEtatEtonne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="117dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgEtatNeutre"
        app:layout_constraintStart_toEndOf="@+id/imgEtatContent"
        app:srcCompat="@mipmap/etonne" />

    <ImageView
        android:id="@+id/imgEtatNeutre"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="117dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgEtatColere"
        app:layout_constraintStart_toEndOf="@+id/imgEtatEtonne"
        app:srcCompat="@mipmap/neutre" />

    <ImageView
        android:id="@+id/imgEtatColere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="117dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgEtatTriste"
        app:layout_constraintStart_toEndOf="@+id/imgEtatNeutre"
        app:srcCompat="@mipmap/colere" />

    <ImageView
        android:id="@+id/imgEtatMove"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:alpha="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgEtatTriste"
        app:layout_constraintTop_toTopOf="@id/imgEtatColere"
        app:srcCompat="@mipmap/move"
        tools:layout_editor_absoluteY="480dp" />


    <ImageView
        android:id="@+id/imgEtatTriste"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="117dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgEtatMove"
        app:layout_constraintStart_toEndOf="@+id/imgEtatColere"
        app:srcCompat="@mipmap/triste" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSuivant"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="155dp"
        android:layout_height="68dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:text="@string/new_capture_suivant"
        android:textSize="20sp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDetails"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="390dp"
        android:layout_marginBottom="104dp"
        android:shadowColor="@color/colorShadow"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/new_capture_details"
        android:textColor="@color/colorAccent"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/txtLayoutNom"
        app:layout_constraintEnd_toStartOf="@+id/btnCapture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="116dp"
        android:text="@string/champs_obligatoires"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>