<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_app"
    tools:context=".presentation.ui.activity.NewCaptureActivity"
    tools:layout_editor_absoluteY="25dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCapture"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="299dp"
        android:shadowColor="@color/colorShadow"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/new_capture_capture"
        android:textColor="@color/colorAccent"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/txtTemps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDetails"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDetails"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="390dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.5"
        android:text="@string/new_capture_details"
        android:textColor="@color/colorAccent"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/graph_capture"
        app:layout_constraintEnd_toStartOf="@+id/btnCapture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:backgroundTint="@color/colorValidation"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRightArrow"
        app:srcCompat="@drawable/ic_done"
        tools:ignore="VectorDrawableCompat" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graph_capture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"

        android:layout_marginTop="120dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLeftArrow"
        app:layout_constraintEnd_toStartOf="@+id/btn3D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="53dp"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtTemps"
        app:srcCompat="@drawable/ic_stop"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/btnStop"
        app:layout_constraintTop_toTopOf="@+id/btnStop"
        app:srcCompat="@drawable/ic_start"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txtTemps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="244dp"
        android:text="@string/CreateCaptureTemps"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/graph_capture"
        app:layout_constraintTop_toBottomOf="@+id/btnCapture" />

    <ImageButton
        android:id="@+id/btn3D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="38dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/btnCapture"
        app:layout_constraintTop_toBottomOf="@+id/btnCapture"
        app:srcCompat="@mipmap/three_d" />

    <ImageButton
        android:id="@+id/btnLeftArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="53dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/monitor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph_capture"
        app:srcCompat="@drawable/ic_arrow"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/btnRightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="593dp"
        android:background="@android:color/transparent"
        android:scaleX="-1"
        app:layout_constraintEnd_toStartOf="@+id/fab_addCapture"
        app:srcCompat="@drawable/ic_arrow"
        tools:ignore="VectorDrawableCompat" />

    <com.github.anastr.speedviewlib.PointerSpeedometer
        android:id="@+id/monitor1"
        android:layout_gravity="center_horizontal"
        app:sv_backgroundCircleColor="#00000000"
        app:sv_speedometerColor="#00ccff"
        app:sv_pointerColor="#f00"
        app:sv_unitTextSize="15sp"
        android:layout_width="143dp"
        android:layout_height="151dp"
        app:layout_constraintTop_toBottomOf="@id/graph_capture"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/graph_capture"/>
      


    <TextView
        android:id="@+id/txtPagination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="22dp"
        android:text="Page 1/4"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/monitor1"
        app:layout_constraintTop_toBottomOf="@+id/monitor1" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="338dp"
        android:layout_marginBottom="198dp"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/monitor1"
        app:layout_constraintTop_toBottomOf="@+id/btnCapture"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>